--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Canadian poetry'
 - !lcc 'PS'
+- GITenberg
 title: Embers, Volume 3.
 url: http://www.gutenberg.org/ebooks/6270
